# minigrep

./: Cargo.toml  README.md  todo.txt
benches/: search.rs
src/: core.rs  lib.rs  main.rs  utils.rs
src/snapshots/: minigrep__core__tests__gets_matching_lines.snap  minigrep__utils__tests__format_error_properly.snap
tests/: e2e.rs  integration.rs
