[package]
name = "joyful_minigrep"
description = "grep but mini and colored though"
license = "MIT"
authors = ["Yassin Eldeeb <yassineldeeb94@gmail.com>"]
version = "0.1.1"
edition = "2021"
repository = "https://github.com/YassinEldeeb/minigrep"
keywords = ["grep", "mini", "search", "file"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
term = "0.7.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "search"
harness = false
